ingress.yml
# 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: votingapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-2:009412611595:certificate/5c295a02-7c3e-422e-a29e-5aa0a1657da6'
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - "vote.ravitest.xyz"
    - "result.ravitest.xyz"
    - "www.ravitest.xyz"
    secretName: my-tls-secret
  rules:
  - host: vote.ravitest.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
  - host: result.ravitest.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: result
              port:
                number: 80
  - host: www.ravitest.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: votingapp-ingress-nk
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:688567302884:certificate/8a8afc95-ecf9-484b-b175-f4372669ce00'
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - "ravitest.xyz"
    secretName: my-tls-secret
  rules:
  - host: ravitest.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
